# easyeda2kicad-App

./: .gitignore  LICENSE  README.md  ez-lcsc-chrome-ex.code-workspace  lib.kicad_sym  package-lock.json
.gitea/workflows/: buildPack.yaml
.github/workflows/: README.md  build_release_linux.yml  build_release_windows.yml
ez-lcsc-chrome-ex/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ez-lcsc-chrome-ex/src/: app.css
ez-lcsc-chrome-ex/src/routes/: +layout.svelte  +page.svelte
ez-lcsc-chrome-ex/static/: background.js  content.js  manifest.json
ez-lcsc-desktop-connector/: README.md  package-lock.json  package.json  svelte.config.js
ez-lcsc-desktop-connector/src/: app.css
ez-lcsc-desktop-connector/src-tauri/: .env.example  Cargo.toml  db.csv  diesel.toml  tauri.conf.json
ez-lcsc-desktop-connector/src-tauri/icons/: icon.icns
ez-lcsc-desktop-connector/src-tauri/migrations/2025-02-10-160520_create_projects/: up.sql
ez-lcsc-desktop-connector/src-tauri/resources/: db.csv
ez-lcsc-desktop-connector/src-tauri/src/: db.rs  file_picker_utils.rs  kicad_file_fix.rs  main.rs  sqlite_lib.rs
ez-lcsc-desktop-connector/src-tauri/src/sqlite_lib/: models.rs  schema.rs
ez-lcsc-desktop-connector/src/lib/: projectNames.json
ez-lcsc-desktop-connector/src/lib/components/custom/: settingsSheet.svelte
ez-lcsc-desktop-connector/src/routes/: +layout.svelte  +page.svelte  types.ts
lib.3dshapes/: QFN-32_L4.0-W4.0-H0.8-P0.40.step  QFN-32_L4.0-W4.0-H0.8-P0.40.wrl
lib.pretty/: BUZ-SMD_4P-L8.5-W8.5-P8.50-BR.kicad_mod  QFN-32_L4.0-W4.0-P0.40-BL-EP2.7.kicad_mod
