[package]
name = "ezLCSC2KiCad"
version = "0.1.1"
description = "An application to help you download parts from LCSC and convert them to KiCad format."
authors = ["biggiePete"]
license = ""
repository = ""
default-run = "ezLCSC2KiCad"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = ["notification-all", "system-tray"] }
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
eframe = "0.31.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
csv = "1.1"
uuid = { version = "1.3", features = ["v4"] }
opener = "0.7.2"
notify-rust = "4.11.5"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
regex = "1.0"
walkdir = "2.0"
thiserror = "1.0"
easyeda2kicad-rs = "0.0.2"
log = "0.4"
pretty_env_logger = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
